  info available.
- Change: Different analysis order, when coming from the $this
  scope, for better source generation.
- Change: Different order in the backtrace analysis, for better
  readability.
- Change: Use compressed css for the SmokyGrey skin.
- Change: Refactored the code generation.
- Change: Refactored the routing.
- Change: "Called from" is always expanded in the smokygrey skin.

3.2.4
- Bugfix: Analysing of __PHP_Incomplete_Class does not throw
  errors anymore.
- Bugfix: Regression with the mixup of the two methods of code
  escaping.

3.2.3
- Bugfix: Added missing closing li tag to the expandableChild
  template.
- Bugfix: The fe configuration does not update the render type.
- Bugfix: Do not mixup and/or combine escaping for keys and/or
  code generation.
- Bugfix: Remove a possible warning when cleaning up old log files.
- Bugfix: Minimise interference with strange CSS styles.

3.2.2
- Updated to PHP 7.4
- Bugfix: The process other routing is never called.
- Bugfix: The cookie editor needs to be "initialized" prior usage.
- Bugfix: Wrong meta data, when using dual output.
- Bugfix: Missing css definitions for label.
- Bugfix: Unwanted re-enabling of the source generation.
- Bugfix: Environment check may fail

3.2.1
- Bugfix: Wrong error handler restoration after deleting
  a file.

3.2.0
- Introduce php-mock/php-mock-phpunit.
- Removed the TER-SonarQube findings from the unit tests.
- Added event system to the process classes.
- Clean(er) interface list inside the meta analysis.
- Added current url to the caller finder output.
- Better timer-emergency management on CLI.
- Change: Remove the event prefix and use static::class instead.
- Change: Move cleanup methods to their own class.
- Change: Move the output check methods to an appropriate class.
- Change: Deprecated classes and methods.
- Change: Complete refactor of the rendering mechanism.
- Change: Ported the javascript to type script.